src/objects/WaiveInstallmentNRCOption__mdt.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waiveInstallmentNRC__c</fullName>
        <label>waiveInstallmentNRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waive Installment NRC Option</label>
    <pluralLabel>Waive Installment NRC Options</pluralLabel>
</CustomObject>